[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/BigPixelDemo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/Menu.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://res/crt_material.tres" type="Material" id=4]
[ext_resource path="res://scenes/menu/Kid.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menu/Floor.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/menu/FallingSpikes.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/menu/Explosion.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/menu/Settings.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Wobble"
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ -10.0, 10.0, -10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Environment" id=1]
background_mode = 4
background_canvas_max_layer = 1
glow_enabled = true
glow_intensity = 5.0
glow_bloom = 0.04
glow_blend_mode = 0
glow_high_quality = true
adjustment_enabled = true
adjustment_contrast = 1.15

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="CanvasLayer" parent="."]
layer = -1

[node name="Main" type="Node2D" parent="BG"]

[node name="Polygon2D" type="Polygon2D" parent="BG/Main"]
color = Color( 0.0509804, 0.101961, 0.101961, 1 )
polygon = PoolVector2Array( 0, 0, 0, 384, 800, 384, 800, 0 )

[node name="Explosion" parent="BG/Main" instance=ExtResource( 8 )]

[node name="Kid" parent="BG/Main" instance=ExtResource( 5 )]

[node name="FallingSpikes" parent="BG/Main" instance=ExtResource( 7 )]

[node name="Floor" parent="BG/Main" instance=ExtResource( 6 )]

[node name="LoopCounter" type="Label" parent="BG/Main"]
margin_top = 319.0
margin_right = 800.0
margin_bottom = 341.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 14 )
text = "0"
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -348.5
margin_top = -168.0
margin_right = 348.5
margin_bottom = -115.0
rect_pivot_offset = Vector2( 348, 26 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "I WANNA BE MOOWOOL'S GODOT"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main/Title"]
autoplay = "Wobble"
anims/RESET = SubResource( 3 )
anims/Wobble = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 70
custom_constants/margin_top = 70
custom_constants/margin_left = 70
custom_constants/margin_bottom = 70
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer"]
margin_left = 70.0
margin_top = 70.0
margin_right = 730.0
margin_bottom = 538.0
alignment = 2

[node name="Play" type="Button" parent="Main/MarginContainer/VBoxContainer"]
margin_top = 334.0
margin_right = 660.0
margin_bottom = 376.0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
text = "PLAY"

[node name="Options" type="Button" parent="Main/MarginContainer/VBoxContainer"]
margin_top = 380.0
margin_right = 660.0
margin_bottom = 422.0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
text = "OPTIONS"

[node name="Quit" type="Button" parent="Main/MarginContainer/VBoxContainer"]
margin_top = 426.0
margin_right = 660.0
margin_bottom = 468.0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
text = "QUIT"

[node name="Settings" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Shader" type="CanvasLayer" parent="."]
layer = 3

[node name="ScreenShader" type="ColorRect" parent="Shader"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[connection signal="hit" from="BG/Main/Kid" to="BG/Main/Explosion" method="_on_Kid_hit"]
[connection signal="looped" from="BG/Main/Kid" to="." method="_on_Kid_looped"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
